<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SG DIGITAL POSTER</string>
    <string name="ucrop_label_edit_photo">Crop Image</string>
    <string name="ucrop_menu_crop">Done</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="exchagne_api_key">204b8cfa3e98327b0ea97e85 </string>
    <string name="facebook_app_id">119503636778820</string>
    <string name="facebook_client_token">0bbd37facf20d36a662c57b7b7f744</string>
    <string name="clientId">q9vz5603</string>
    <string name="clientSecret">30zcgyq3ko37t1td</string>
    <string name="whatsapp_api_url">https://iliptam.authlink.me</string>
    <string name="splash_loading">Loading</string>
    <string name="error_message__no_internet">No internet connection.</string>
    <string name="intro_next">NEXT</string>
    <string name="intro_skip">SKIP</string>
    <string name="intro_show_again">Don\'t Show Again</string>
    <string name="intro_title_1">Grow \n Your Business</string>
    <string name="intro_dec_1">We will help you to grow your business by providing digital content</string>
    <string name="intro_title_2">Easy \n Save and Share</string>
    <string name="intro_dec_2">Simply Download and Share to Your Social Media Account</string>
    <string name="intro_title_3">Festival Posts</string>
    <string name="intro_dec_3">Grab an Opportunity to connect with your clients on each festival by creative posts</string>
    <string name="login_welcome">Welcome</string>
    <string name="login_continue">Sign in To Continue</string>
    <string name="login_login">Login</string>
    <string name="please_login">Please Login</string>
    <string name="login_loading">Loading...</string>
    <string name="login_sign_up">Sign Up</string>
    <string name="login_skip">Skip</string>
    <string name="login_email">Email*</string>
    <string name="login_password">Password*</string>
    <string name="login_conform_password">Conform Password*</string>
    <string name="login_name">Name*</string>
    <string name="login_phone_number">Phone Number*</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="hint_name">Enter Name</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_password">Enter Password</string>
    <string name="hint_confirm_password">Enter Confirm Password</string>
    <string name="hint_phone_number">Enter Phone Number</string>
    <string name="login_dot_n_have_account">Don\'t Have Account?</string>
    <string name="login_already_account">Already have Account?</string>
    <string name="login_continue_with">or Continue with</string>
    <string name="login__fail">SignIn Failed</string>
    <string name="login__fail_account">Cannot SignIn your account</string>
    <string name="login__exception_error">There is something wrong.</string>
    <string name="login__failure_error">Authentication failed.</string>
    <string name="login__auth_email">This email is logged in with email and password. Please try to login with email and password.</string>
    <string name="login__auth_google">This email is logged in with Google. Please try to login with Google.</string>
    <string name="app__cancel">Cancel</string>
    <string name="app__noti_open">Open</string>
    <string name="app__noti_new_message">New Message</string>
    <string name="success">SUCCESS</string>
    <string name="confirm">CONFIRM</string>
    <string name="info">INFO</string>
    <string name="error">ERROR</string>
    <string name="warning">WARNING</string>
    <string name="space_not_allowed">Space not allowed</string>
    <string name="pass_not_match">Password Not Match</string>
    <string name="success_register">Successfully Register! \n Login Your Account</string>
    <string name="success_verify">Successfully Verify Your Account</string>
    <string name="login_first_login">Please Login Your \nAccount</string>
    <string name="menu_home">Home</string>
    <string name="menu_category">Category</string>
    <string name="menu_news">News</string>
    <string name="menu_custom">Custom</string>
    <string name="menu_business">Business</string>
    <string name="menu_download">Download</string>
    <string name="menu_language">Language</string>
    <string name="menu_subscription">Subscribe</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_login">Login / Register</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_user_info">User Info</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_delete_account">Delete Account</string>
    <string name="menu_rate">Rate App</string>
    <string name="menu_share">Share This App</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_exit">Exit</string>
    <string name="login_to_account">Login to Account</string>
    <string name="success_logout">Successfully Logout</string>
    <string name="latest_festivals">Latest Festivals</string>
    <string name="trending">Trending</string>
    <string name="business_category">Business Category</string>
    <string name="latest_news">Latest News</string>
    <string name="view_all">View All</string>
    <string name="custom_categories">Custom Categories</string>
    <string name="select_languages">Select Languages</string>
    <string name="all_languages">All Languages</string>
    <string name="save">Save</string>
    <string name="message__cancel_close">Cancel</string>
    <string name="message__want_to_logout">Do you really want to logout?</string>
    <string name="message__logout">Logout</string>
    <string name="message__want_to_delete">Do you really want to delete your account?</string>
    <string name="message__delete">Delete</string>
    <string name="err_add_image">Please Select Images</string>
    <string name="success_profile">Successfully Update Profile</string>
    <string name="message_contact">Successfully Send Contact \n As soon as Possible we will contact you</string>
    <string name="fail_message_contact">Response is Fail! \n Try again</string>
    <string name="force_update_true">Update is available</string>
    <string name="force_update__button_update"> Update </string>
    <string name="version_update"> Version Update </string>
    <string name="do_you_want_to_exit">Do you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="festival_image_create">Festival Images will created once \n it\'s show</string>
    <string name="no_festival_image">No Festival Images</string>
    <string name="verify_email__informateion">You\'ve just received an Massage containing verification code on</string>
    <string name="verify_email__enter_code">Enter verification code</string>
    <string name="invalid_enter_code">Invalid verification code</string>
    <string name="verify_email__change_email">Change Email</string>
    <string name="verify_email__resent_code">Resent Code</string>
    <string name="verify_email__submit">Submit</string>
    <string name="verify_email__title">Email Verification</string>
    <string name="edit">Edit</string>
    <string name="default_business">Default</string>
    <string name="delete">Delete</string>
    <string name="add_business">+Add</string>
    <string name="business_name">Business Name*</string>
    <string name="business_email">Business Email*</string>
    <string name="business_phone_number">Business Phone Number*</string>
    <string name="business_website">Business Website (optional)</string>
    <string name="business_address">Business Address*</string>
    <string name="hint_business_name">Enter Business Name</string>
    <string name="hint_business_email">Enter Business Email</string>
    <string name="hint_business_number">Enter Business Number</string>
    <string name="hint_business_website">Enter Business Website</string>
    <string name="hint_business_address">Enter Business Address</string>
    <string name="choose_image">+Choose Image</string>
    <string name="add_business_titles">Add Business</string>
    <string name="edit_business_titles">Edit Business</string>
    <string name="invalid_email">Enter Valid Email</string>
    <string name="please_add_business_titles">Please Add Your Business \n for Create Post</string>
    <string name="your_business_limit">Your Business Limit is Full \n Upgrade Your Plan</string>
    <string name="name">Name</string>
    <string name="logo">Logo</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="add_text">Add Text</string>
    <string name="add_image">Add Image</string>
    <string name="text_color">Text Color</string>
    <string name="font">Font</string>
    <string name="text_size">Text Size</string>
    <string name="create">Create</string>
    <string name="frame">Frames</string>
    <string name="edit_text">Edit Text</string>
    <string name="letter_space">Latter Space</string>
    <string name="line_space">Line Space</string>
    <string name="opacity">Opacity</string>
    <string name="color">Color</string>
    <string name="select">Select</string>
    <string name="select_image">Select Image</string>
    <string name="select_image_msg">Select an Image from Gallery or from Camera to Make Post</string>
    <string name="camera">Camera</string>
    <string name="Gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="sticker">Sticker</string>
    <string name="select_sticker">Select Sticker</string>
    <string name="err_creating_image">Error while creating image</string>
    <string name="err_save_image">Error while saving image</string>
    <string name="save_title">Save &amp; Share Post</string>
    <string name="don_t_create">Can\'t create directory to save image</string>
    <string name="image_saved">Image Save Successfully</string>
    <string name="video_saved">Video Save Successfully</string>
    <string name="share_via">Share Via</string>
    <string name="sure_delete">Are you sure you want to delete this post?</string>
    <string name="sure_delete_business">Are you sure you want to delete this business?</string>
    <string name="image_deleted">Image Deleted</string>
    <string name="video_deleted">Video Deleted</string>
    <string name="error_delete">Error Deleting Image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="video">Video</string>
    <string name="image">Image</string>
    <string name="subscribe_now">SUBSCRIBE NOW</string>
    <string name="subscribe">Subscribe</string>
    <string name="premium">Premium Post</string>
    <string name="please_subscribe">This is a Premium Post \n Please subscribe</string>
    <string name="please_subscribe_frame">This is a Premium Frame \n Please subscribe</string>
    <string name="payments">Payments</string>
    <string name="card_upi_net_banking">Pay with Cards / UPI / NetBanking</string>
    <string name="card_paytm">Pay with Paytm</string>
    <string name="massage">Massage*</string>
    <string name="enter_details">Enter Details</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="change">Change</string>
    <string name="forgot_msg">Enter your registered email address below \n we will send you email to change your password</string>
    <string name="send">Send</string>
</resources>