<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:background="@color/bg_screen"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enquiry"
        android:textStyle="bold"
        android:textSize="@dimen/_15ssp"
        android:layout_marginStart="@dimen/_10ssp"
        android:layout_marginTop="@dimen/_10ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10ssp"
        android:layout_marginTop="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_cancel"
        app:tint="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <TextView
            android:id="@+id/name_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20ssp"
            android:layout_marginTop="@dimen/_8ssp"
            android:text="@string/login_name"
            android:textColor="@color/black"
            app:fonts='@{"bold"}'
            app:textSize='@{"font_body_size"}' />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20ssp"
            android:layout_marginTop="@dimen/_8ssp"
            android:background="@drawable/white_shape_edit"
            android:hint="@string/hint_name"
            android:inputType="text"
            android:paddingHorizontal="@dimen/_10ssp"
            android:paddingVertical="@dimen/_10ssp"
            android:textColorHint="@color/gray"
            app:fonts='@{"normal"}'
            app:textSize='@{"font_body_size"}' />

        <TextView
            android:id="@+id/textViewsign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20ssp"
            android:layout_marginTop="@dimen/_8ssp"
            android:text="@string/login_email"
            android:textColor="@color/black"
            app:fonts='@{"bold"}'
            app:textSize='@{"font_body_size"}' />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20ssp"
            android:layout_marginTop="@dimen/_8ssp"
            android:background="@drawable/white_shape_edit"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="@dimen/_10ssp"
            android:paddingVertical="@dimen/_10ssp"
            android:textColorHint="@color/gray"
            app:fonts='@{"normal"}'
            app:textSize='@{"font_body_size"}' />

        <TextView
            android:id="@+id/textmobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20ssp"
            android:layout_marginTop="@dimen/_8ssp"
            android:text="Mobile*"
            android:textColor="@color/black"
            app:fonts='@{"bold"}'
            app:textSize='@{"font_body_size"}' />

        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20ssp"
            android:layout_marginTop="@dimen/_8ssp"
            android:background="@drawable/white_shape_edit"
            android:hint="@string/hint_phone_number"
            android:inputType="phone"
            android:paddingHorizontal="@dimen/_10ssp"
            android:paddingVertical="@dimen/_10ssp"
            android:textColorHint="@color/gray"
            app:fonts='@{"normal"}'
            app:textSize='@{"font_body_size"}' />

        <TextView
            android:id="@+id/textViewi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20ssp"
            android:layout_marginTop="@dimen/_8ssp"
            android:text="@string/massage"
            android:textColor="@color/black"
            app:fonts='@{"bold"}'
            app:textSize='@{"font_body_size"}' />

        <EditText
            android:id="@+id/et_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20ssp"
            android:layout_marginTop="@dimen/_8ssp"
            android:background="@drawable/white_shape_edit"
            android:gravity="top"
            android:hint="@string/enter_details"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:paddingHorizontal="@dimen/_10ssp"
            android:paddingVertical="@dimen/_10ssp"
            android:textColorHint="@color/gray"
            app:fonts='@{"normal"}'
            app:textSize='@{"font_body_size"}' />


        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="@dimen/_10ssp"
            android:backgroundTint="@color/blue_color"
            android:paddingHorizontal="@dimen/_10ssp"
            android:paddingVertical="@dimen/_8ssp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/al_white"
            app:fonts='@{"bold"}'
            app:textSize='@{"button_text_16"}' />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>