<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"

    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/linearLayout8"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/active_color"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/save_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/change_password"
                android:textColor="@color/al_white" />

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="@dimen/_30ssp"
                android:layout_height="@dimen/_30ssp"
                android:layout_marginRight="@dimen/_8ssp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                app:srcCompat="@drawable/ic_cancel" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_title_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10ssp"
            android:text="@string/new_password"
            android:layout_marginHorizontal="@dimen/_8ssp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/etBusinessName"
            app:layout_constraintTop_toBottomOf="@+id/etBusinessName"
            />

        <EditText
            android:id="@+id/etNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3ssp"
            android:background="@drawable/white_shape_edit"
            android:hint="@string/enter_new_password"
            android:inputType="textPassword"
            android:layout_marginHorizontal="@dimen/_8ssp"
            android:paddingHorizontal="@dimen/_8ssp"
            android:paddingVertical="@dimen/_8ssp"
            app:layout_constraintEnd_toEndOf="@+id/etBusinessName"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            />

        <TextView
            android:id="@+id/tv_title_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5ssp"
            android:text="@string/confirm_password"
            android:layout_marginHorizontal="@dimen/_8ssp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/etBusinessName"
            app:layout_constraintTop_toBottomOf="@+id/etBusinessNumber"
            />

        <EditText
            android:id="@+id/etConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_shape_edit"
            android:hint="@string/enter_confirm_password"
            android:layout_marginHorizontal="@dimen/_8ssp"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/_3ssp"
            android:paddingHorizontal="@dimen/_8ssp"
            android:paddingVertical="@dimen/_8ssp"
            />

        <Button
            android:id="@+id/btn_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_color"
            android:text="@string/change"
            android:paddingHorizontal="@dimen/_10ssp"
            android:paddingVertical="@dimen/_8ssp"
            android:layout_marginVertical="@dimen/_10ssp"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="true"
            android:textColor="@color/al_white"
            android:textSize="16sp"
            android:textStyle="bold"/>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linDummy"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>