<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context="com.example.brandpeak.com.sgdigitalposter.app.ui.activities.ForgotPassActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constrainedHeight="true"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_forgot_password"
            android:layout_marginTop="@dimen/_20ssp"
            app:fonts='@{"extra_bold"}'
            android:textColor="@color/black"
            app:textSize='@{"font_body_size"}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_msg"
            android:gravity="center"
            app:fonts='@{"bold"}'
            android:textColor="@color/gray"
            app:textSize='@{"font_body_s_size"}'
            android:layout_marginTop="@dimen/_3ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />

        <EditText
            android:id="@+id/etEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_shape_edit"
            android:gravity="top"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="@dimen/_8ssp"
            android:paddingVertical="@dimen/_8ssp"
            android:layout_marginHorizontal="@dimen/_8ssp"
            android:layout_marginTop="@dimen/_10ssp"
            app:fonts='@{"normal"}'
            app:layout_constraintTop_toBottomOf="@+id/textView20"
            app:textSize='@{"font_body_s_size"}' />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="@dimen/_10ssp"
            android:backgroundTint="@color/blue_color"
            android:paddingHorizontal="@dimen/_10ssp"
            android:paddingVertical="@dimen/_8ssp"
            android:text="@string/send"
            android:textAllCaps="true"
            android:textColor="@color/al_white"
            app:fonts='@{"medium"}'
            app:textSize='@{"button_text_16"}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmailAddress" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>